<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/strUser">

        <EditTextPreference
            android:defaultValue="Default value"
            android:key="edit_text_preference_1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/strNameExplication"
            android:title="@string/strYourName" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/strList">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="preferencia_morosos"
            android:summary="@string/strMorosExplicacion"
            android:title="@string/strMorosos" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="preferencia_galeria"
            android:summary="@string/strGaleryExplication"
            android:title="@string/strGalery" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="check_box_preference_1"
            android:title="Check box preference" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="check_box_preference_1"
            android:title="Check box preference" />
    </PreferenceCategory>
</PreferenceScreen>